kubernetes/rbac-demo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-team
