kubernetes/secret-demo-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-demo-pod
  labels:
    app: secret-demo
spec:
  containers:
  - name: demo-app
    image: alpine
    command: ["sh", "-c", "echo 'Pod running with Secrets...'; sleep 3600"]

    # -------------------------------------------------------------
    # METHOD 1: INJECT SECRET AS ENVIRONMENT VARIABLES
    # -------------------------------------------------------------
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secrets
      readOnly: true

  volumes:
  - name: secret-volume
    secret:
      secretName: app-secret
