kubernetes/apple-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-deployment
  labels:
    app: apple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple-app
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=🍎 Hello from the APPLE Service!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
spec:
  type: ClusterIP
  selector:
    app: apple
  ports:
  - port: 5678
    targetPort: 5678
