kubernetes/banana-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  labels:
    app: banana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana-app
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=🍌 Hello from the BANANA Service!"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  type: ClusterIP
  selector:
    app: banana
  ports:
  - port: 5678
    targetPort: 5678
