kubernetes/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80         # Port on the Service
    targetPort: 80   # Port on the Pod container
