kubernetes/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80         # Public port exposed to users (standard HTTP)
    targetPort: 80   # Port on the Pod container
