kubernetes/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80         # Port on the Service
    targetPort: 80   # Port on the Pod container
    nodePort: 30080  # Port opened on the Worker Node (30000-32767)
